Fri Jan 22 08:48:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Time_Value_Test.cpp:
          Removed not used variable

Thu Jan 21 23:16:27 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/CDR_Stream.cpp:

          Fixed the read_8 and write_8 methods for the iPhone Hardware.
          The iPhone Hardware (ARM architecture) has the same memory
          layout as Intel targets, and no conversion or swapping is
          necessary. Double values sent from Windows to iPhone Hardware
          were messed up before this fix due to unnecessary conversion.

        * ace/config-macosx-iphone-hardware.h:
        * ace/config-macosx-iphone-simulator.h:

          Added ACE_HAS_IPHONE macro.

Thu Jan 21 16:33:37 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_iphone.GNU:

          Removed the hardcoding of -DACE_AS_STATIC_LIBS and
          -DTAO_AS_STATIC_LIBS to CFLAGS and CXXFLAGS and instead
          added static_libs_only=1. That fixes the problem. Thanks
          to Johnny Willemsen for the tip.

Thu Jan 21 15:25:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Multicast_Test.cpp:
          Fixed a Linux specific problem where certain Linux flavors use
          VERY strict rules concerning multicast communications and where
          using the (system defined) defaults for the network interface
          used for multicast sending/receiving does not provide a
          matching setup (i.e. resulting if used for sending does not
          match the if used for receiving -> nothing received).
          The fix simply forces a fixed 'lo' interface to be used for
          sending and receiving.

Thu Jan 21 14:57:57 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_iphone.GNU:

          Added -DACE_AS_STATIC_LIBS and -DTAO_AS_STATIC_LIBS to the CFLAGS
          and CXXFLAGS variables to allow more tests to pass on the iPhone